WEB-1281 Добавил хелпер по работе с файлами и папками

--- a/WebsiteReleaseHelper/App.config
+++ b/WebsiteReleaseHelper/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+
+  <appSettings>
+
+    <add key="primary_instance_source_dir" value="\\kaspihelpt-1\exch\web" />
+
+
+    <add key="primary_instance_target_dir" value="\\kaspihelpt-1\c$\projects\KaspiHelpTest" />
+    <add key="website_dir" value="site" />
+    <add key="website_arch_dir" value="arch" />
+
+  </appSettings>
+
 </configuration>
