WEB-1281 Изменил логику старта приложения

--- a/WebsiteReleaseHelper/App.config
+++ b/WebsiteReleaseHelper/App.config
@@ -6,11 +6,13 @@
 
   <appSettings>
 
-    <add key="primary_instance_source_dir" value="\\kaspihelpt-1\exch\web" />
+    <add key="primary_instance_deploy_dir" value="\\kaspihelpt-1\exch\web" />
+    <add key="secondary_instance_deploy_dir" value="\\kaspihelpt-1\exch\web" />
+    <add key="kaspimanager_instance_deploy_dir" value="\\kaspihelpt-1\exch\web" />
 
 
     <add key="primary_instance_target_dir" value="\\kaspihelpt-1\c$\projects\KaspiHelpTest" />
-    <add key="website_dir" value="site" />
+    <add key="website_common_dir" value="site" />
     <add key="website_arch_dir" value="arch" />
 
   </appSettings>
