--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DirectoryHelpers\FileCopyInfo.cs" />
     <Compile Include="DirectoryHelpers\FilePathsProvider.cs" />
+    <Compile Include="IGlobalInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
