WEB-1281 Сделал архивирование во вторичных потоках, вывод текстов сообщения в том числе

--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arhivator\ArchiveResult.cs" />
     <Compile Include="DirectoryHelpers\FileCopyInfo.cs" />
-    <Compile Include="DirectoryHelpers\FilePathsProvider.cs" />
+    <Compile Include="DirectoryHelpers\FilesToCopyProvider.cs" />
+    <Compile Include="Arhivator\WebsiteArchivator.cs" />
     <Compile Include="IGlobalInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
