--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -41,12 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Arhivator\ArchiveResult.cs" />
+    <Compile Include="Arhivator\AsyncActionResult.cs" />
     <Compile Include="DirectoryHelpers\FileCopyInfo.cs" />
     <Compile Include="DirectoryHelpers\FilesToCopyProvider.cs" />
     <Compile Include="Arhivator\WebsiteArchivator.cs" />
     <Compile Include="IGlobalInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SiteInstances\PrimaryInstanceHelper.cs" />
+    <Compile Include="SiteInstances\SiteInstanceBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
