--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -42,8 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arhivator\AsyncActionResult.cs" />
-    <Compile Include="DirectoryHelpers\FileCopyInfo.cs" />
-    <Compile Include="DirectoryHelpers\FilesReplicator.cs" />
+    <Compile Include="IoProviders\DirectoryHelper.cs" />
+    <Compile Include="IoProviders\FileCopyInfo.cs" />
+    <Compile Include="IoProviders\FilesReplicator.cs" />
     <Compile Include="Arhivator\WebsiteArchivator.cs" />
     <Compile Include="IGlobalInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
