--- a/WebsiteReleaseHelper/WebsiteReleaseHelper.csproj
+++ b/WebsiteReleaseHelper/WebsiteReleaseHelper.csproj
@@ -102,6 +102,9 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Content Include="WebsiteNodesInfo.example.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
